css/style.css
/*****************\
 || CONTENTS 
 1. IMPORT FONTS
 2. GENERAL STYLES
 3. UTILITIES 
 4. SITEWIDE
 5. PAGES
\*****************/

/* NOTES 

   Rule groups: 
   - Positioning
   - Display and box model
   - Colour
   - Text / typography
   - Other

*/

/* Import Fonts */

@import url('https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Source+Code+Pro&display=swap');

/* General Style */

/* Colors  */

:root { 
    --primary-color-1: #FF6857;
    --primary-color-2: #800000;
    --accent-color-1: #88B39C;
    --accent-color-2: #456956;
    --white: #f5f5f5;
    --black: #0E0C01;
}

body { 
    font-size: 16px;
    margin: 0 auto;
    color: var(--black);
    background: var(--white);
    background-attachment: fixed;
}

header { 
    position: fixed;
    top: 0;
    height: 70px;
    width: 100%;
    box-sizing: border-box;
    padding: 0 50px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--black);
}

h1,
h2,
h3,
h4 { 
    font-family: Tahoma, Verdana, sans-serif;
    font-weight: bold;
}

p, li { 
    font-size: inherit;
    font-family: Verdana, sans-serif;
    line-height: 1.4;
    color: var(--black)
}

ul li { 
    display: inline-block;
}

a { 
    text-decoration: none;
    color: var(--primary-color-1);
}

strong { 
    font-weight: bold;
}

em { 
    font-style: italic;
}

img { 
    height: 2rem;
    width: 2rem;
}

/* Utilities */

.content-center{ 
    margin: 0 auto;
}

h1::before, h1::after, 
.typewriter::before, .typewriter::after,
.projects-container::before, .projects-container::after,
section::before, section::after { 
    font-family: 'La Belle Aurore', cursive;    
    font-size: 1.4rem;
    position: absolute;
    left: 2rem;
    z-index: -1;
    color: var(--primary-color-1);
}


/* Sitewide */

.nav-banner { 
    z-index: 20;
}

.logo { 
    visibility: hidden;
    padding-left: 2rem;
}

.nav-top { 
    float: right;
}

.nav-top li { 
    padding-right: 2rem;
}

.hero { 
    height: 100vh;
    display: flex;
    align-items: center;
    
}

h1 { 
    font-size: 10rem;
    padding: 2rem;
}

h1::before, h1::after { 
    font-family: 'La Belle Aurore', cursive;
    font-size: 1.4rem;
    font-weight: normal;
    position: absolute;
}

h1::before { 
    content: "<h1>";
    margin-top: -1rem;
}

h1::after { 
    content: "</h1>";
    margin-top: 10rem;
}

.typewriter { 
    font-family: 'Source Code Pro', monospace;
    font-size: 4rem;
    margin-top: 1rem;
    padding-left: 2rem;
}

.typewriter::before, .typewriter::after { 
    font-family: 'La Belle Aurore', cursive;    
    font-size: 1.4rem;
    position: absolute;
}

.typewriter::before { 
    content: "<p>";
    margin-top: -1.1rem;
}

.typewriter::after { 
    content: "</p>";
    margin-top: 4.3rem;
}

.about { 
    padding: 30px 20%;
    overflow: hidden;
    background-color: var(--black);
}

.about::before {
    content: "<about>";
}

.about::after { 
    content: "</about>";
}

.about p { 
    max-width: 75ch;
    font-size: 1.1rem;
    margin: 0 auto;
    text-align: center;
    color: #f5f5f5;
}

.skills::before {
    content: "<skills>";
    
}

.skills::after { 
    content: "</skills>";
    display: block;
}

.skills ul {
    width: 100%;
    padding: 50px 0 ;
    display: inline-flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.skills li {
    display: block;
    padding: 10px;
    text-align: center;
    font-weight: bold;
}

.skills-icon { 
    width: 6rem;
    height: auto;
    padding: 20px 30px;
}

.projects-container { 
    position: relative;
    margin: 50px 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

.projects-container::before { 
    content: "<projects>";
}
.projects-container::after {
    content: "</projects>";
    top: 100%;
}

.project-card { 
    height: auto;
    width: 45ch;
    margin: 50px;
    overflow: hidden;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
}

.project-card > img { 
    height: 300px;
    width: auto;
    object-fit: cover;
}

.project-card:hover { 
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.contact { 
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--primary-color-1);
}

@media only screen and (min-width: 1600px) { 
    .hero { 
        max-width: 1600px;
        margin: 0 auto;
    }

    h1::before, h1::after { 
        left: auto;
    }

    .typewriter::before, .typewriter::after { 
        left: auto;
    }
}

@media only screen and (max-width: 768px) { 

    header { 
        padding: 0;
    }

    .logo { 
        display: none;
    }

    .nav-top { 
        width: 100%;
    }

    .nav-top ul { 
        display: flex;
        justify-content: space-around;
    }

    .nav-top li { 
        padding: 0;
    }

    h1 { 
        font-size: 5rem;
    }

    h1::after { 
        margin-top: 5.4rem;
        left: 2rem;
    }

    .typewriter { 
        font-size: 2rem;
    }

    .typewriter::before { 
        margin-top: -1.5rem;
    }

    .typewriter::after { 
        margin-top: 2.5rem;
        left: 2rem;
    }

    .about { 
        padding: 5%;
    }
}

